feat: added width, height projects

--- a/styles.css
+++ b/styles.css
@@ -166,6 +166,8 @@
 
 /* Карточки проектов */
 .project-card {
+    width: 100%; /* Полная ширина контейнера */
+    height: 100%; /* Полная высота контейнера */
     background-color: rgba(255, 255, 255, 0.85);
     /* Полупрозрачный белый фон */
     border-radius: 1rem;
