--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    filter: contrast(1.2) saturate(1.5);
 }
 
 .project-bg {
