--- a/styles.css
+++ b/styles.css
@@ -167,8 +167,10 @@
 
 /* Карточки проектов */
 .project-card {
-    width: 100%; /* Полная ширина контейнера */
-    height: 100%; /* Полная высота контейнера */
+    width: 100%;
+    /* Полная ширина контейнера */
+    height: 100%;
+    /* Полная высота контейнера */
     background-color: rgba(255, 255, 255, 0.85);
     /* Полупрозрачный белый фон */
     border-radius: 1rem;
@@ -280,4 +282,13 @@
 .contact-icon:hover {
     animation: pulse 0.6s infinite;
     /* эффект пульсации */
+}
+
+/* Navigation styles */
+nav {
+    background: #ffffff;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    width: 100%;
+    z-index: 10;
 }
